--- a/platform/ai/k8s/gateway.yaml
+++ b/platform/ai/k8s/gateway.yaml
@@ -13,3 +13,9 @@ spec:
     allowedRoutes:
       namespaces:
         from: Same
+  - name: https
+    protocol: HTTP
+    port: 443
+    allowedRoutes:
+      namespaces:
+        from: Same
