--- a/platform/ai/k8s/llm-providers/ollama/ollama-httproute.yaml
+++ b/platform/ai/k8s/llm-providers/ollama/ollama-httproute.yaml
@@ -18,5 +18,5 @@ spec:
         type: PathPrefix
         value: "/"
     backendRefs:
-    - name: open-webui-ollama
+    - name: ollama
       port: 11434
