--- a/kubernetes/.taskfiles/kubectl/Taskfile.yml
+++ b/kubernetes/.taskfiles/kubectl/Taskfile.yml
@@ -17,4 +17,15 @@ tasks:
 
   cleanup-pods:
     cmds:
-      kubectl get pod -n studytonight | grep Evicted | awk '{print $1}' | xargs kubectl delete pod -n studytonight
+      - for: ["Evicted", "Failed", "Succeeded", "ContainerStatusUnknown"]
+        cmd: kubectl delete pods --field-selector status.phase={{.ITEM}} -A --ignore-not-found=true
+
+  privileged:
+    desc: Run a privileged pod
+    cmd: |
+      kubectl run privileged-{{.node}} -i --rm --image=null \
+        --overrides="$(yq {{.KUBERNETES_RESOURCES_DIR}}/privileged-pod.tmpl.yaml -o=json | envsubst)"
+    env:
+      node: '{{.node}}'
+    preconditions:
+      - test -f {{.KUBERNETES_RESOURCES_DIR}}/privileged-pod.tmpl.yaml
