--- a/platform/ai/k8s/resource-quotas.yaml
+++ b/platform/ai/k8s/resource-quotas.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: ResourceQuota
 metadata:
-  name: default-resource-quotas
+  name: ai-resource-quotas
   namespace: ai
 spec:
   hard:
     limits.cpu: "2"
-    limits.memory: 8Gi
+    limits.memory: 2Gi
     limits.ephemeral-storage: 2Gi
     requests.cpu: "1"
-    requests.memory: 4Gi
+    requests.memory: 1Gi
     requests.ephemeral-storage: 1Gi
