--- a/platform/automation/compose.yaml
+++ b/platform/automation/compose.yaml
@@ -1,117 +1,38 @@
-x-n8n: &service-n8n
-  image: teaglebuilt/n8n:latest
-  networks: ['data-platform']
-  environment:
-    - DB_TYPE=postgresdb
-    - DB_POSTGRESDB_HOST=postgres
-    - DB_POSTGRESDB_USER=${POSTGRES_USER}
-    - DB_POSTGRESDB_PASSWORD=${POSTGRES_PASSWORD}
-    - N8N_DIAGNOSTICS_ENABLED=false
-    - N8N_PERSONALIZATION_ENABLED=false
-    - N8N_TEMPLATES_ENABLED=true
-    - N8N_ENCRYPTION_KEY
-    - N8N_USER_MANAGEMENT_JWT_SECRET
-    - EXTERNAL_FRONTEND_HOOKS_URLS
-    - N8N_DIAGNOSTICS_CONFIG_FRONTEND
-    - N8N_DIAGNOSTICS_CONFIG_BACKEND
-  links:
-    - postgres
-
+---
 services:
-  postgres:
-    image: postgres:16-alpine
-    networks: ['data-platform']
-    restart: unless-stopped
+  kestra:
+    image: kestra/kestra:latest
+    pull_policy: always
+    user: "root"
+    command: server standalone --worker-thread=128 --config /etc/config/application.yaml
+    volumes:
+      - kestra-data:/app/storage
+      - /var/run/docker.sock:/var/run/docker.sock
+      - /tmp/kestra-wd:/tmp/kestra-wd
+      - ./services/kestra/application.yaml:/etc/config/application.yaml
     environment:
-      - POSTGRES_USER
-      - POSTGRES_PASSWORD
-      - POSTGRES_DB
-    volumes:
-      - postgres_storage:/var/lib/postgresql/data
-    healthcheck:
-      test: ['CMD-SHELL', 'pg_isready -h localhost -U ${POSTGRES_USER} -d ${POSTGRES_DB}']
-      interval: 5s
-      timeout: 5s
-      retries: 10
-
-  n8n-import:
-    <<: *service-n8n
-    container_name: n8n-import
-    entrypoint: /bin/sh
-    command:
-      - "-c"
-      - "n8n import:credentials --separate --input=/backup/credentials && n8n import:workflow --separate --input=/backup/workflows"
-    volumes:
-      - .:/backup
-    depends_on:
-      postgres:
-        condition: service_healthy
-
-  n8n:
-    <<: *service-n8n
-    container_name: n8n
-    restart: unless-stopped
+      KESTRA_POSTGRES_USER: ${KESTRA_POSTGRES_USER}
+      KESTRA_POSTGRES_PASSWORD: ${KESTRA_POSTGRES_PASSWORD}
     ports:
-      - 5678:5678
-    volumes:
-      - n8n_storage:/home/node/.n8n
-      - ./:/backup
-      - ./shared:/data/shared
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
-    depends_on:
-      postgres:
-        condition: service_healthy
-      n8n-import:
-        condition: service_completed_successfully
+      - "8080:8080"
+      - "8081:8081"
+    networks:
+      - automation
+      - data_platform
 
-  qdrant:
-    image: qdrant/qdrant
-    container_name: qdrant
-    networks: ['data-platform']
-    restart: unless-stopped
-    ports:
-      - 6333:6333
-    volumes:
-      - qdrant_storage:/qdrant/storage
-
-  ollama-cpu:
-    profiles: ["cpu"]
-    <<: *service-ollama
-
-  ollama-gpu:
-    profiles: ["gpu-nvidia"]
-    <<: *service-ollama
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              count: 1
-              capabilities: [gpu]
-
-  ollama-pull-llama-cpu:
-    profiles: ["cpu"]
-    <<: *init-ollama
-    depends_on:
-      - ollama-cpu
-
-  ollama-pull-llama-gpu:
-    profiles: ["gpu-nvidia"]
-    <<: *init-ollama
-    depends_on:
-      - ollama-gpu
-
-  octobot:
-    image: octobot:latest
-    ports:
-      - 8080:8080
+  # octobot:
+  #   image: drakkarsoftware/octobot:stable
+  #   ports:
+  #     - 9980:5001
+  #   volumes:
+  #     - ./robots/trading/tmp/octobot:/octobot
 
 volumes:
-  n8n_storage:
-  postgres_storage:
-  ollama_storage:
-  qdrant_storage:
+  kestra-data:
+    driver: local
 
 networks:
-  data-platform:
+  automation:
+  data_platform:
+    external: true
+    name: data_platform_network
