--- a/platform/observability/compose.yaml
+++ b/platform/observability/compose.yaml
@@ -1,16 +1,76 @@
+x-common: &common
+  pull_policy: always
+
 services:
   grafana:
+    <<: *common
     image: grafana/grafana
     container_name: grafana
     ports:
       - 3000:3000
     restart: unless-stopped
     environment:
-      - GF_SECURITY_ADMIN_USER=admin
-      - GF_SECURITY_ADMIN_PASSWORD=grafana
+      GF_SECURITY_ADMIN_USER: ${GRAFANA_USERNAME}
+      GF_SECURITY_ADMIN_PASSWORD: ${GRAFANA_PASSWORD}
+      GF_INSTALL_PLUGINS: grafana-clock-panel,natel-discrete-panel,grafana-piechart-panel
     volumes:
       - ./grafana:/etc/grafana/provisioning
       - grafana-data:/var/lib/grafana
+
+  influxdb:
+    <<: *common
+    image: influxdb:2
+    ports:
+      - 8086:8086
+    environment:
+      DOCKER_INFLUXDB_INIT_MODE: setup
+      DOCKER_INFLUXDB_INIT_USERNAME: ${INFLUXDB_ADMIN_USERNAME}
+      DOCKER_INFLUXDB_INIT_PASSWORD: ${INFLUXDB_ADMIN_PASSWORD}
+      DOCKER_INFLUXDB_INIT_ADMIN_TOKEN: ${INFLUXDB_ADMIN_TOKEN}
+      DOCKER_INFLUXDB_INIT_ORG: ${INFLUXDB_ORG}
+      DOCKER_INFLUXDB_INIT_BUCKET: ${INFLUXDB_BUCKET}
+    volumes:
+      - type: volume
+        source: influxdb-storage
+        target: /var/lib/influxdb
+      # - type: volume
+      #   source: influxdb-config
+      #   target: /etc/influxdb
+
+  chronograf:
+    <<: *common
+    image: chronograf:latest
+    restart: always
+    ports:
+      - '8888:8888'
+    volumes:
+      - chronograf-storage:/var/lib/chronograf
+    depends_on:
+      - influxdb
+    environment:
+      INFLUXDB_URL: http://influxdb:8086
+      INFLUXDB_USERNAME: ${INFLUXDB_ADMIN_USERNAME}
+      INFLUXDB_PASSWORD: ${INFLUXDB_ADMIN_PASSWORD}
+
+  unpoller:
+    <<: *common
+    image: ghcr.io/unpoller/unpoller:latest
+    depends_on:
+      - influxdb
+      - chronograf
+    environment:
+      UP_INFLUXDB_DB: ${INFLUXDB_DB}
+      UP_INFLUXDB_USER: ${INFLUXDB_ADMIN_USERNAME}
+      UP_INFLUXDB_PASS: ${INFLUXDB_ADMIN_PASSWORD}
+      UP_INFLUXDB_ORG: ${INFLUXDB_ORG}
+      UP_INFLUXDB_BUCKET: ${INFLUXDB_BUCKET}
+      UP_INFLUXDB_AUTH_TOKEN: ${INFLUXDB_ADMIN_TOKEN}
+      UP_INFLUXDB_URL: http://influxdb:8086
+      UP_UNIFI_DEFAULT_USER: ${UNIFI_USER}
+      UP_UNIFI_DEFAULT_PASS: ${UNIFI_PASS}
+      UP_UNIFI_DEFAULT_URL: ${UNIFI_NETWORK_GATEWAY}
+      UP_UNIFI_DEFAULT_SAVE_DPI: true
+      UP_POLLER_DEBUG: false
 
   # loki:
   #   container_name: loki
@@ -23,28 +83,9 @@ services:
   #     - ./config/config.yaml:/etc/loki/config.yaml:ro
   #     - data_loki:/loki:rw
 
-  # influxdb2:
-  #   image: influxdb:2
-  #   ports:
-  #     - 8086:8086
-  #   environment:
-  #     DOCKER_INFLUXDB_INIT_MODE: setup
-  #     DOCKER_INFLUXDB_INIT_USERNAME_FILE: ${INFLUXDB_ADMIN_USERNAME}
-  #     DOCKER_INFLUXDB_INIT_PASSWORD_FILE: ${INFLUXDB_ADMIN_PASSWORD}
-  #     DOCKER_INFLUXDB_INIT_ADMIN_TOKEN_FILE: ${INFLUXDB_ADMIN_TOKEN}
-  #     DOCKER_INFLUXDB_INIT_ORG: docs
-  #     DOCKER_INFLUXDB_INIT_BUCKET: home
-  #   volumes:
-  #     - type: volume
-  #       source: influxdb2-data
-  #       target: /var/lib/influxdb2
-  #     - type: volume
-  #       source: influxdb2-config
-  #       target: /etc/influxdb2
-
 volumes:
   grafana-data:
-  # influxdb2-data:
-  # influxdb2-config:
+  influxdb-storage:
+  chronograf-storage:
   # data_loki:
   #   driver: local
