--- a/platform/observability/prometheus/kustomization.yaml
+++ b/platform/observability/prometheus/kustomization.yaml
@@ -12,11 +12,11 @@ helmCharts:
       - configs/prometheus-operator.yaml
     valuesInline:
       nodeExporter:
-        enabled: false
+        enabled: true
       kubeApiServer:
-        enabled: false
+        enabled: true
       kubernetesServiceMonitors:
-        enabled: false
+        enabled: true
       coreDns:
         enabled: false
       kubeDns:
@@ -38,4 +38,4 @@ helmCharts:
       kubeProxy:
         enabled: false
       kubelet:
-        enabled: false
+        enabled: true
