--- a/platform/automation/k8s/n8n/storage/shared-pvc.yaml
+++ b/platform/automation/k8s/n8n/storage/shared-pvc.yaml
@@ -1,13 +1,12 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: n8n-storage-pvc
+  name: n8n-storage-shared-pvc
   namespace: automation
-  # labels:
-  #   version: v1.0
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
+  volumeName: automation-platform-storage
   resources:
     requests:
-      storage: 1Gi
+      storage: 5Gi
