use nfs for n8n pvc

--- a/platform/automation/k8s/n8n/deployment.yaml
+++ b/platform/automation/k8s/n8n/deployment.yaml
@@ -113,5 +113,4 @@ spec:
           persistentVolumeClaim:
             claimName: n8n-storage-pvc
         - name: shared-data
-          persistentVolumeClaim:
-            claimName: n8n-storage-shared-pvc
+          emptyDir: {}
