--- a/platform/automation/k8s/n8n/pvc.yaml
+++ b/platform/automation/k8s/n8n/pvc.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   accessModes:
   - ReadWriteMany
+  storageClassName: nfs-csi
   volumeName: automation-platform-storage
   resources:
     requests:
