--- a/kubernetes/apps/networking/cilium/values.yaml
+++ b/kubernetes/apps/networking/cilium/values.yaml
@@ -2,10 +2,14 @@ cluster:
   name: mlops
   id: 1
 
+commonLabels:
+  namespace: kube-system
+
 kubeProxyReplacement: true
 kubeProxyReplacementHealthzBindAddr: 0.0.0.0:10256
 
- # Talos specific
+# Talos specific:w
+#
 k8sServiceHost: localhost
 k8sServicePort: 7445
 securityContext:
@@ -46,8 +50,8 @@ resources:
     cpu: 200m
     memory: 512Mi
 
-#debug:
-#  enabled: true
+debug:
+ enabled: true
 
 # Increase rate limit when doing L2 announcements
 k8sClientRateLimit:
@@ -60,7 +64,7 @@ l2announcements:
 externalIPs:
   enabled: true
 
-enableK8sEndpointSlice: true
+enableK8sEndpointSlice: false
 ciliumEndpointSlice:
   enabled: false
 
@@ -72,12 +76,12 @@ loadBalancer:
   algorithm: maglev
 
 gatewayAPI:
-  enabled: false
+  enabled: true
   enableAlpn: true
   enableAppProtocol: true
 
 envoy:
-  enabled: true
+  enabled: false
   prometheus:
     serviceMonitor:
       enabled: true
