--- a/kubernetes/apps/networking/cilium/values.yaml
+++ b/kubernetes/apps/networking/cilium/values.yaml
@@ -51,7 +51,7 @@ resources:
     memory: 512Mi
 
 debug:
- enabled: true
+  enabled: false
 
 # Increase rate limit when doing L2 announcements
 k8sClientRateLimit:
