--- a/kubernetes/charts/homelab-gateway/templates/gatewayclass.yaml
+++ b/kubernetes/charts/homelab-gateway/templates/gatewayclass.yaml
@@ -1,7 +1,8 @@
+---
 apiVersion: gateway.networking.k8s.io/v1
 kind: GatewayClass
 metadata:
-  name: envoy
-  namespace: kube-system
+  name: kgateway
 spec:
-  controllerName: gateway.envoyproxy.io/gatewayclass-controller
+  controllerName: kgateway.dev/kgateway
+  description: Standard class for managing Gateway API ingress traffic.
