--- a/platform/ai/k8s/llm-providers/ollama/ollama-httproute.yaml
+++ b/platform/ai/k8s/llm-providers/ollama/ollama-httproute.yaml
@@ -2,14 +2,14 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: ollama-http-route
+  name: ollama-httproute
   namespace: ai
   annotations:
     external-dns.alpha.kubernetes.io/hostname: "ollama.homelab.internal"
 spec:
   parentRefs:
-  - name: homelab-gateway
-    namespace: kube-system
+  - name: ai-gateway
+    namespace: ai
   hostnames:
     - "ollama.homelab.internal"
   rules:
@@ -18,5 +18,5 @@ spec:
         type: PathPrefix
         value: "/"
     backendRefs:
-    - name: open-webui-ollama
+    - name: ollama
       port: 11434
