--- a/platform/ai/k8s/llm-providers/openai/kustomization.yaml
+++ b/platform/ai/k8s/llm-providers/openai/kustomization.yaml
@@ -2,7 +2,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - backend.yaml
-  - backend-service.yaml
-  - backend-tls-policy.yaml
-  - backend-security-policy.yaml
+  - httproute.yaml
+  - inferencemodel.yaml
+  - inferencepool.yaml
