--- a/kubernetes/apps/networking/cilium/values.yaml
+++ b/kubernetes/apps/networking/cilium/values.yaml
@@ -30,6 +30,10 @@ bpf:
 ipam:
   mode: kubernetes
 
+prometheus:
+  serviceMonitor:
+    trustCRDsExist: true
+
 operator:
   rollOutPods: true
   resources:
