--- a/kubernetes/helmfile.d/01-bootstrap.gotmpl.yaml
+++ b/kubernetes/helmfile.d/01-bootstrap.gotmpl.yaml
@@ -19,7 +19,7 @@ releases:
     values:
       - ../apps/networking/cilium/values.yaml
     hooks:
-      - events: ["postsync"]
+      - events: ["postapply"]
         showlogs: true
         command: "bash"
         args:
