--- a/kubernetes/charts/homelab-gateway/templates/gatewayclass.yaml
+++ b/kubernetes/charts/homelab-gateway/templates/gatewayclass.yaml
@@ -3,6 +3,12 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: GatewayClass
 metadata:
   name: kgateway
+  namespace: {{ .Release.Namespace }}
+  labels:
+    app.kubernetes.io/managed-by: Helm
+  annotations:
+    meta.helm.sh/release-name: {{ .Release.Name }}
+    meta.helm.sh/release-namespace: {{ .Release.Namespace }}
 spec:
   controllerName: kgateway.dev/kgateway
   description: Standard class for managing Gateway API ingress traffic.
