--- a/kubernetes/charts/homelab-gateway/templates/hubble-ui-route.yaml
+++ b/kubernetes/charts/homelab-gateway/templates/hubble-ui-route.yaml
@@ -3,7 +3,12 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
   name: hubble-ui-route
+  namespace: {{ .Release.Namespace }}
+  labels:
+    app.kubernetes.io/managed-by: Helm
   annotations:
+    meta.helm.sh/release-name: {{ .Release.Name }}
+    meta.helm.sh/release-namespace: {{ .Release.Namespace }}
     external-dns.alpha.kubernetes.io/hostname: hubble.homelab.internal
 spec:
   parentRefs:
