--- a/kubernetes/charts/homelab-gateway/Chart.yaml
+++ b/kubernetes/charts/homelab-gateway/Chart.yaml
@@ -10,6 +10,9 @@ dependencies:
   - name: gateway-helm
     version: v0.0.0-latest
     repository: oci://docker.io/envoyproxy
+  - name: ai-gateway-crds-helm
+    version: v0.0.0-latest
+    repository: oci://docker.io/envoyproxy
   - name: ai-gateway-helm
     version: v0.0.0-latest
     repository: oci://docker.io/envoyproxy
