--- a/kubernetes/helmfile.d/00-prepare.gotmpl.yaml
+++ b/kubernetes/helmfile.d/00-prepare.gotmpl.yaml
@@ -21,3 +21,22 @@ hooks:
       - |
         sops --decrypt --input-type yaml --output-type yaml \
           ../apps/secrets.enc.yaml /dev/stdin | kubectl apply -f -
+  - events: ["prepare"]
+    showlogs: true
+    command: "kubectl"
+    args:
+      - apply
+      - -f
+      - https://raw.githubusercontent.com/kubernetes-sigs/gateway-api/v1.2.0/config/crd/standard/gateway.networking.k8s.io_gatewayclasses.yaml
+      - -f
+      - https://raw.githubusercontent.com/kubernetes-sigs/gateway-api/v1.2.0/config/crd/standard/gateway.networking.k8s.io_gateways.yaml
+      - -f
+      - https://raw.githubusercontent.com/kubernetes-sigs/gateway-api/v1.2.0/config/crd/standard/gateway.networking.k8s.io_httproutes.yaml
+      - -f
+      - https://raw.githubusercontent.com/kubernetes-sigs/gateway-api/v1.2.0/config/crd/standard/gateway.networking.k8s.io_referencegrants.yaml
+      - -f
+      - https://raw.githubusercontent.com/kubernetes-sigs/gateway-api/v1.2.0/config/crd/standard/gateway.networking.k8s.io_grpcroutes.yaml
+      - -f
+      - https://raw.githubusercontent.com/kubernetes-sigs/gateway-api/v1.2.0/config/crd/experimental/gateway.networking.k8s.io_tlsroutes.yaml
+      - -f
+      - https://github.com/prometheus-operator/prometheus-operator/releases/download/v0.82.1/stripped-down-crds.yaml
