--- a/kubernetes/charts/homelab-gateway/templates/hubble-ui-route.yaml
+++ b/kubernetes/charts/homelab-gateway/templates/hubble-ui-route.yaml
@@ -8,7 +8,7 @@ metadata:
     external-dns.alpha.kubernetes.io/hostname: hubble.homelab.internal
 spec:
   parentRefs:
-  - name: cilium-gateway-homelab-gateway
+  - name: homelab-gateway
     namespace: kube-system
   hostnames:
     - hubble.homelab.internal
