--- a/platform/ai/k8s/llm-providers/ollama/ollama-httproute.yaml
+++ b/platform/ai/k8s/llm-providers/ollama/ollama-httproute.yaml
@@ -8,7 +8,7 @@ metadata:
     external-dns.alpha.kubernetes.io/hostname: "ollama.homelab.internal"
 spec:
   parentRefs:
-  - name: cilium-gateway-homelab-gateway
+  - name: homelab-gateway
     namespace: kube-system
   hostnames:
     - "ollama.homelab.internal"
