--- a/kubernetes/apps/networking/cilium/ip-pool.yaml
+++ b/kubernetes/apps/networking/cilium/ip-pool.yaml
@@ -3,6 +3,5 @@ kind: CiliumLoadBalancerIPPool
 metadata:
   name: proxmox-pool
 spec:
-  blocks:
-    - start: 192.168.2.10
-      stop: 192.168.2.255
+  cidrs:
+    - cidr: {{ env "CILIUM_LB_CIDR" | quote }}
