fix missing interface

--- a/kubernetes/apps/networking/cilium/announcement.yaml
+++ b/kubernetes/apps/networking/cilium/announcement.yaml
@@ -4,5 +4,6 @@ metadata:
   name: default-l2-announcement-policy
   namespace: kube-system
 spec:
+  interfaces: ["eth0"]
   externalIPs: true
   loadBalancerIPs: true
