--- a/platform/ai/k8s/ai-platform-storage.yaml
+++ b/platform/ai/k8s/ai-platform-storage.yaml
@@ -16,7 +16,7 @@ spec:
     - nolock
   csi:
     driver: nfs.csi.k8s.io
-    volumeHandle: ollama
+    volumeHandle: ai
     volumeAttributes:
       server: unas.internal
       share: /var/nfs/shared/ai_platform_data
