--- a/platform/automation/k8s/n8n/deployment.yaml
+++ b/platform/automation/k8s/n8n/deployment.yaml
@@ -52,6 +52,8 @@ spec:
               value: "false"
             - name: N8N_HOST
               value: n8n.homelab.internal
+            - name: N8N_EDITOR_BASE_URL
+              value: https://n8n.homelab.internal
             - name: N8N_PROTOCOL
               value: https
             - name: N8N_SSL_CERT
