--- a/platform/automation/k8s/n8n/secrets.enc.yaml
+++ b/platform/automation/k8s/n8n/secrets.enc.yaml
@@ -1,26 +1,26 @@
-apiVersion: ENC[AES256_GCM,data:2KQ=,iv:aM3cNtg+fALxgmDVa3ZW5G4DPhh+0cLHoPjLNa971BY=,tag:/L/zRCEdpnzD+fmHeZ6koA==,type:str]
-kind: ENC[AES256_GCM,data:HN7UjdXX,iv:Ps32GyPv68M82c5nBQcl0mIGfWuI/a3WvaqQ66EIiGw=,tag:/Rpa5JMuJXh9g/RLDMQdZA==,type:str]
+apiVersion: ENC[AES256_GCM,data:g70=,iv:5dc/4MkUZi0ZjDRzd55CXDJ/GQKhPyGMCQPkLVFB9/Q=,tag:/mUy03petZfgjacmwVZD+Q==,type:str]
+kind: ENC[AES256_GCM,data:mt6AiHfi,iv:BSGHPPK+2z3prKNEQQ/xjG1dSCWxpyqrHSnQ18OtnnA=,tag:XxYcKxrRfHLR4PN6FbcRRQ==,type:str]
 metadata:
-    name: ENC[AES256_GCM,data:qQh9AgdTFKK14+Q=,iv:Pmx1nIFHo0g88o92fvlcBHVR02hqphB6r+Uwi0QuuQE=,tag:73vidqv2hTyZIZNA3/XeNQ==,type:str]
-    namespace: ENC[AES256_GCM,data:9/GzUcSN9nocBA==,iv:8CxVcC2Cj6euJAv0qrFC16STTkC3BBEifN0GD32KWoY=,tag:R/iAFGmiLIc6NlQc15+LGw==,type:str]
-type: ENC[AES256_GCM,data:Uq+/PCrt,iv:MukyAW2Hp1p7Dva/+n97mLIZ69ADxhOi0HqcIVn6gfo=,tag:qkaFX52VBoC/ve7a9ZDJRQ==,type:str]
+    name: ENC[AES256_GCM,data:bKhuG00W5yOJIy8=,iv:P4XUn6hCjVnjOzIE+SXeroMz/koKP9QgFA5VxvOmQdU=,tag:XC3vngQw3tG59h4pal8ZaA==,type:str]
+    namespace: ENC[AES256_GCM,data:zQ2p8UVSsLLWHg==,iv:Rf9LaSeOPyAYVW6RCuJ+8sq6ScRqj0sNYZcKfHmCHqA=,tag:MulCK84HFFiw7kbm3EOEhA==,type:str]
+type: ENC[AES256_GCM,data:YmQcVmzj,iv:GW6Qfip+kzej2jIHnxmrHvELI2hS8HGsmytkFFzQLnI=,tag:O62qKEX3KVdZEw86iz4zPA==,type:str]
 data:
-    #ENC[AES256_GCM,data:u9RD3F6fII3JsnVBzFa+R4nyvokBxeov+PU=,iv:QC/QBWqQPW7vKYPAZW4QxMy+S6E/aeKiivLPOt8NXRw=,tag:Iy4qlhFu90iEr+HWLlm0uA==,type:comment]
-    N8N_ENCRYPTION_KEY: ENC[AES256_GCM,data:g277VtI6nWvZPtckNr/HShM7VBXg0cGk,iv:DWePtRc5NT0GpxIgW5nv60K6UmaWXBsCCfUuduMtcxw=,tag:2mwLNVF7uAKsTudPyZm3Dg==,type:str]
-    N8N_USER_MANAGEMENT_JWT_SECRET: ENC[AES256_GCM,data:r7y+nfLr3YRXrzGlX1A8N4nWlZfWZ2cW,iv:919NMzqUu/ayNkyAqd11h0JjC4ox+NIQJOvL9bh32Dk=,tag:xK1qPVjxi7u9cRbDdVX3Tw==,type:str]
-    POSTGRES_PASSWORD: ENC[AES256_GCM,data:8c4+SGrEbp6hXGUxwNlsVxny09sRHlp4,iv:xqm1OVdLanXVYDQAQUNJL2xKlSLPGAjGOQUiSQUo34Q=,tag:4TJ50UuTbbTlfybcUQ8DrA==,type:str]
+    #ENC[AES256_GCM,data:Stll7swCuDKyuFbStDVRwrVpbhVDiseZE6Q=,iv:Ahs6EIST5+kjbe7e/Lgs9vayRMterBR6h2T8JIj6x4Y=,tag:+T4hUZD+Okg8lW08STCtGQ==,type:comment]
+    N8N_ENCRYPTION_KEY: ENC[AES256_GCM,data:IGm2UaQIkyMpTsQlTSQoIh1iRq2wb/fy,iv:5hN4UMS0E3weRaECRsmeOoOCIPp3v5AoqeARCeaAYCA=,tag:Dwc/e3+x1Je+pnU/yOA1fA==,type:str]
+    N8N_USER_MANAGEMENT_JWT_SECRET: ENC[AES256_GCM,data:VsXkoNP3SSNVHVUcUq0a4TXXOLFP00Pj,iv:461ihqjzd3R4Vx/sZP4MYBhEdt/xhUoFqdqlKVLi8jI=,tag:Hxd+k2xqXG209HFnbnHpVQ==,type:str]
+    POSTGRES_PASSWORD: ENC[AES256_GCM,data:bxrulbF8GZRuBpyHqvaskkJAQWNPKUzV,iv:JD5J4pEnP54U5Hk82xMGe5zffa+8WlX7y7oPz82bOWk=,tag:cYp2Vhq+OBCKqHApb0u2Hg==,type:str]
 sops:
     kms:
         - arn: arn:aws:kms:us-east-1:626956831217:key/f22ea8b8-ec28-4d80-988e-7372419dbc28
-          created_at: "2025-03-03T14:58:45Z"
-          enc: AQICAHgf2Bz/yC/N+d80dqtXyzpCypiaZx1Lgwl8YcJR1TYnOAEM3dIM2rMRiYL5zIP37PvfAAAAfjB8BgkqhkiG9w0BBwagbzBtAgEAMGgGCSqGSIb3DQEHATAeBglghkgBZQMEAS4wEQQMJksd12qk3mIRN23tAgEQgDuiDHu2Pbi5QAExcTdTFR+ElSH//QGPdRpVtu+uXGQb09+wZaw2Gs65DCAhKmKkdW/W9wvfDWlxClSMuw==
+          created_at: "2025-06-16T20:02:17Z"
+          enc: AQICAHgf2Bz/yC/N+d80dqtXyzpCypiaZx1Lgwl8YcJR1TYnOAFwhuDtfLzcsk2snri/fSavAAAAfjB8BgkqhkiG9w0BBwagbzBtAgEAMGgGCSqGSIb3DQEHATAeBglghkgBZQMEAS4wEQQMQwm/omvmtqWJDQFuAgEQgDvZFj+beW9ciAWFxkwqNLuYm2VqmMe2RLCkVb7FN6D1zJramPPjsEWu/mGRa5QNOyWAg4Gw0bIi8gvbLA==
           aws_profile: ""
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2025-03-03T14:58:45Z"
-    mac: ENC[AES256_GCM,data:LVQT6utrdX82qsjmbj7y/oX1MwpDYNoKByuDaN5E2bwuDooe3am4du2CelFqT787Ausrr8UOOf4XTQzRRxFcSNyLemTC4pwkYjMNUwTyPTlG64+ZdAJl3laKVw/MjnqkJV0HSoh3v3S6nDhzlX7RgrlOuWF+dojyq1osT2ZGW7o=,iv:VFZ9/4p++aA3ee95a39gktBM7ZIghYv15xwBc2L7SuY=,tag:DZzMyfRaXiC2No8Wm0rjkg==,type:str]
+    lastmodified: "2025-06-16T20:02:17Z"
+    mac: ENC[AES256_GCM,data:Urb/pU7Z6o/CCGRB8z28oK+qa5lXzNiLnh8Mw5K9qfP2WYaIq4BTH1aAnj3dibJRVSFxT0YJiB+UnMFCRW4g4ILj4N3HTS3wv8DOsneHfFvF71bl3dxNigmXoPw0fbvP3rvBCdsy4G80AyfVtVzvbIU+MTlflJ1/f5LfDGMkJpg=,iv:eBQVRcWwveSi0g3TvUXeA5wmONYMT+Vgq0EXT4/LCuM=,tag:TFla33HqJq057JSU3r0nhQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData|apiVersion|metadata|kind|type)$
     version: 3.8.1
